The best is coming out

--- a/app/src/main/res/layout/fragment_soko_huru.xml
+++ b/app/src/main/res/layout/fragment_soko_huru.xml
@@ -23,4 +23,9 @@
         android:textColor="#FF4444"
         android:visibility="gone"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/position"
+        android:visibility="gone"/>
 </FrameLayout>
