--- a/app/src/main/res/layout/activity_main_detail.xml
+++ b/app/src/main/res/layout/activity_main_detail.xml
@@ -1,12 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="sokohuru.muchbeer.king.sokohurutab.detail.MainActivityDetail">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btPosition"
+        android:text="Obtain Position"/>
+
     <TextView
+        android:padding="12dp"
+        android:textSize="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New way is comming" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="37dp"
+        android:id="@+id/txtResult"
+        android:text="no"/>
 
-</RelativeLayout>
+</LinearLayout>
