--- a/app/src/main/res/layout/activity_main_detail.xml
+++ b/app/src/main/res/layout/activity_main_detail.xml
@@ -5,11 +5,22 @@
     android:orientation="vertical"
     tools:context="sokohuru.muchbeer.king.sokohurutab.detail.MainActivityDetail">
 
-    <Button
+
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginRight="8dp"
+        android:layout_gravity="center"/>
+
+
+    <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btPosition"
-        android:text="Obtain Position"/>
+        android:textStyle="bold"
+        android:textSize="28dp"
+        android:text="Item Name"/>
 
     <TextView
         android:padding="12dp"
@@ -17,11 +28,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New way is comming" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="37dp"
-        android:id="@+id/txtResult"
-        android:text="no"/>
+
 
 </LinearLayout>
