--- a/app/src/main/res/layout/fragment_main_click.xml
+++ b/app/src/main/res/layout/fragment_main_click.xml
@@ -5,17 +5,29 @@
     android:orientation="vertical"
     >
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/image"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="center"
+            />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="You the best"
         android:textSize="28dp"
         android:id="@+id/name"></TextView>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtError"
+            android:visibility="gone"/>
     </LinearLayout>
 </FrameLayout>
