--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,7 @@
 
     <item
         android:id="@+id/menu_search"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="@string/menuSearch"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always"/>
