--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,7 @@
     <dimen name="margin_top">24dp</dimen>
     <dimen name="app_bar_top_padding">0dp</dimen>
     <dimen name="drawer_margin_top">24dp</dimen>
-
+    <dimen name="detail_backdrop_height">256dp</dimen>
 
 
     <dimen name="size_word">16dp</dimen>
