The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -5,87 +5,79 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center_horizontal"
-    android:padding="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+       android:id="@+id/bestlayout">
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_width="165dp"
+        android:layout_height="wrap_content"
         android:id="@+id/card_view"
-        card_view:cardCornerRadius="7dp"
-        android:layout_margin="4dp"
+        card_view:cardCornerRadius="6dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="5dp"
+        card_view:cardElevation="0.01dp"
+        android:layout_marginBottom="1dp"
 
         >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFF"
+    android:layout_width="165dp"
+    android:layout_height="wrap_content"
+
     >
 
     <ImageView
         android:id="@+id/sokoThumbnail"
-        android:layout_width="@dimen/movie_thumbnail_height"
-        android:layout_height="@dimen/movie_thumbnail_width"
-        android:layout_centerVertical="true"
+        android:layout_width="165dp"
+        android:layout_height="155dp"
+        android:scaleType="fitXY"
+        android:paddingBottom="5dp"
         android:src="@drawable/ic_launcher"
-        android:padding="4dp"
-        android:layout_marginLeft="7dp"
+                      />
 
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_below="@+id/sokoThumbnail"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/sokoTitle"
-        style="@style/Base.TextAppearance.AppCompat.Body2"
-        android:layout_toRightOf="@+id/sokoThumbnail"
-        android:layout_alignParentTop="true"
-        android:padding="4dp"
-        android:textSize="18sp"
-        android:alpha="0.87"
-        android:text="Item"
-        android:layout_marginLeft="7dp"
-        />
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sokoRating"
-        style="@style/Base.TextAppearance.AppCompat.Body1"
-                android:layout_below="@id/sokoTitle"
-        android:paddingTop="8dp"
-        android:text="Moto wetu"
-        android:alpha="0.87"
-        android:layout_toRightOf="@+id/sokoThumbnail"
-        android:layout_marginLeft="7dp"
-        android:textSize="14dp"/>
+        <View
 
-    <View
-        android:id="@+id/viewLine"
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="@color/recyclerView"
-        android:layout_below="@id/sokoRating"
-        android:layout_toRightOf="@+id/sokoThumbnail"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="4dp"
+            android:id="@+id/viewLine"
+            android:layout_width="140dp"
+            android:layout_height="0.3dp"
+            android:background="#B6B6B6"
+                      />
 
-        />
+        <TextView
+            android:paddingTop="5dp"
+            android:id="@+id/sokoTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingRight="2dp"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Galaxy"
+            android:maxLength="16"
+            android:singleLine="true"
+            android:ellipsize="end"
+           />
 
-    <TextView
-        android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/sokoPrice"
-        android:layout_below="@id/viewLine"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_toRightOf="@+id/sokoThumbnail"
-        android:textColor="@color/black"
-        android:text="Amount"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="7dp"
-        />
+        <TextView
+            android:padding="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sokoRating"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/black"
+            android:text="Amount"
+            android:singleLine="true"
+                      />
+    </LinearLayout>
 
 </RelativeLayout>
     </android.support.v7.widget.CardView>
