The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -10,28 +10,31 @@
        android:id="@+id/bestlayout">
 
     <android.support.v7.widget.CardView
-        android:layout_width="165dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        card_view:contentPadding="7dp"
+        android:elevation="100dp"
         android:id="@+id/card_view"
-        card_view:cardCornerRadius="6dp"
+        card_view:cardCornerRadius="3dp"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="5dp"
-        card_view:cardElevation="0.01dp"
+        card_view:cardElevation="4dp"
         android:layout_marginBottom="1dp"
 
         >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="165dp"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
 
     >
 
     <ImageView
         android:id="@+id/sokoThumbnail"
-        android:layout_width="165dp"
+        android:layout_width="160dp"
         android:layout_height="155dp"
         android:scaleType="fitXY"
+
         android:paddingBottom="5dp"
         android:src="@drawable/ic_launcher"
                       />
@@ -40,6 +43,7 @@
         android:layout_below="@+id/sokoThumbnail"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
+
         android:background="@android:color/white"
         android:orientation="vertical">
 
