The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/layout/activity_main_detail.xml
+++ b/app/src/main/res/layout/activity_main_detail.xml
@@ -1,11 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/container3"
-    tools:context="sokohuru.muchbeer.king.sokohurutab.detail.MainActivityDetail">
+    tools:context=".MainActivity">
 
 
-
-</FrameLayout>
+</LinearLayout>
