--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -66,6 +66,7 @@
             android:textColor="@android:color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Galaxy"
+            android:textSize="15dp"
             android:maxLength="16"
             android:singleLine="true"
             android:ellipsize="end"
@@ -77,6 +78,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/sokoRating"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="17dp"
             android:textColor="@color/black"
             android:text="Amount"
             android:singleLine="true"
