--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:paddingTop="@dimen/app_bar_top_padding"
@@ -8,7 +10,8 @@
     android:id="@+id/appbar"
     android:background="@color/primaryColor"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:theme="@style/MyCustomeToolBarTheme">
+    app:theme="@style/MyCustomeToolBarTheme"
+    app:layout_scrollFlags="scroll|enterAlways" >
 
 </android.support.v7.widget.Toolbar>
 
