--- a/app/src/main/res/layout/fragment_soko_huru.xml
+++ b/app/src/main/res/layout/fragment_soko_huru.xml
@@ -1,9 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context="sokohuru.muchbeer.king.sokohurutab.SokoHuruFragment">
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
@@ -28,4 +28,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/position"
         android:visibility="gone"/>
-</FrameLayout>
+
+</LinearLayout>
+
