--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,14 @@
     <dimen name="movie_thumbnail_width">90dp</dimen>
     <dimen name="movie_thumbnail_height">90dp</dimen>
 
+    <!-- Default screen margins, per the Android Design guidelines. -->
+      <dimen name="card_margin">16dp</dimen>
+    <dimen name="list_item_avatar_size">40dp</dimen>
+
+    <dimen name="statusbar_size">24dp</dimen>
+
+    <dimen name="cardview_toolbar_spacer">16dp</dimen>
+
+    <dimen name="toolbar_double_height">112dp</dimen>
+
 </resources>
