The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/drawable-v21/custom_bg.xml
+++ b/app/src/main/res/drawable-v21/custom_bg.xml
@@ -10,7 +10,7 @@
     <item android:state_pressed="true">
 
         <shape>
-            <solid android:color="@color/background"/>
+            <solid android:color="@color/cardLine"/>
         </shape>
     </item>
 <item>
