--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <include
-        android:id="@+id/appbar"
-        layout="@layout/appbar"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.Toolbar
+
+        android:paddingTop="@dimen/app_bar_top_padding"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/appbar"
+        android:background="@color/primaryColor"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/MyCustomeToolBarTheme"
+        app:layout_scrollFlags="scroll|enterAlways" >
+
+    </android.support.v7.widget.Toolbar>
 
     <sokohuru.muchbeer.king.sokohurutab.tab.SlidingTabLayout
         android:id="@+id/tabs"
