--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -7,7 +7,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-       android:id="@+id/bestlayout">
+       android:id="@+id/bestlayout"
+    android:background="@drawable/custom_bg"
+    android:clickable="true"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="160dp"
