--- a/app/src/main/res/layout/activity_main_soko.xml
+++ b/app/src/main/res/layout/activity_main_soko.xml
@@ -1,22 +1,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_refresh_layout"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.Toolbar
-
-        android:paddingTop="@dimen/app_bar_top_padding"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <include
         android:id="@+id/appbar"
-        android:background="@color/primaryColor"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/MyCustomeToolBarTheme"
-        app:layout_scrollFlags="scroll|enterAlways" >
+        layout="@layout/appbar"
 
-    </android.support.v7.widget.Toolbar>
+        />
 
     <TextView
         android:id="@+id/textVolleyError"
@@ -44,15 +36,21 @@
         android:textColor="#009688"
         android:visibility="gone"/>
 
-
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/listSokoni"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
+        android:layout_height="wrap_content">
 
-        />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/listSokoni"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
+    <!-- TODO: Update blank fragment layout -->
+
 
 
 
