--- a/app/src/main/res/layout/activity_main_soko.xml
+++ b/app/src/main/res/layout/activity_main_soko.xml
@@ -1,5 +1,5 @@
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,6 +12,7 @@
 
     <TextView
         android:id="@+id/textVolleyError"
+        android:layout_below="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -26,14 +27,25 @@
         android:id="@+id/position"
         android:visibility="gone"/>
 
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_centerInParent="true"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:indeterminateDrawable="@drawable/circular_progress_bar"
+        android:background="@drawable/circle_shape"
+        />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appbar"
+
+        >
 
         <android.support.v7.widget.RecyclerView
+
             android:id="@+id/listSokoni"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -46,5 +58,5 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
 
