--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -8,12 +8,12 @@
     <shape
         android:innerRadiusRatio="4"
         android:shape="ring"
-        android:thickness="2dp"
+        android:thickness="3dp"
         android:useLevel="true"><!-- this line fixes the issue for lollipop api 21 -->
 
         <gradient
             android:angle="0"
-            android:endColor="#FF4444"
+            android:endColor="#007DD6"
             android:startColor="#007DD6"
             android:type="sweep"
             android:centerY="0.5"
