--- a/app/src/main/res/layout/activity_main_soko.xml
+++ b/app/src/main/res/layout/activity_main_soko.xml
@@ -44,6 +44,19 @@
 
         >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/infoText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Vuta chini kwa mahitaji" />
+
         <android.support.v7.widget.RecyclerView
 
             android:id="@+id/listSokoni"
@@ -52,6 +65,7 @@
             android:scrollbars="vertical"
 
             />
+        </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
     <!-- TODO: Update blank fragment layout -->
 
