The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/appbar"
-    android:background="@color/primaryColor"
+    android:background="@color/primary"
    >
 
 </android.support.v7.widget.Toolbar>
