--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/appbar"
-        android:background="@color/primaryColor"
+        android:background="@color/primary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/MyCustomeToolBarTheme"
         app:layout_scrollFlags="scroll|enterAlways" >
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:background="@color/primaryColor"/>
+        android:background="@color/primary"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
