--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -1,9 +1,6 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/card_margin">
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,8 +9,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/primary_light"
     tools:context=".MainActivity">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:elevation="100dp"
+        card_view:contentPadding="16dp"
+        android:layout_marginLeft="@dimen/margin_large"
+        android:layout_marginRight="@dimen/margin_large"
+        card_view:cardElevation="2dp"
+        android:background="@color/colorBackground"
+        card_view:cardCornerRadius="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+           >
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
@@ -24,19 +37,21 @@
         android:id="@+id/sign_out_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign Out"
+        android:text="Jitoe"
         android:enabled="true"
         android:padding="4dp"
         android:layout_marginBottom="7dp"
-        android:background="#2196F3"/>
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorSuccess"/>
 
     <Button
         android:id="@+id/revoke_access_button"
         android:padding="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Revoke Access"
-        android:background="#2196F3"
+        android:text="Batilisha usajiri"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorSuccess"
         android:enabled="true" />
 
     <TextView
@@ -44,8 +59,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/statuslabel"
         android:text="Status"
-        android:visibility="gone"/>
-
-
+        android:visibility="gone"
+        android:textColor="@color/secondary_text"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
-</android.support.v7.widget.CardView>
