--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary_dark">#00796B</color>
 
     <color name="primaryColor">#E91E63</color>
     <color name="primaryColorDark">#C2185B</color>
     <color name="secondaryColor">#FF4081</color>
     <color name="background">#E0E0E0</color>
-    <color name="accentColor">#2196F3</color>
+    <color name="accentColor">#448AFF</color>
+    <color name="accent">#FF5252</color>
     <color name="whitie">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="navDrawer">#EEE</color>
     <color name="recyclerView">#FCE4EC</color>
     <color name="cardLine">#F06292</color>
     <color name="window_background">#FFF5F5F5</color>
+    <color name="imageColor">#0097A7</color>
+    <color name="colorSuccess">#009688</color>
+    <color name="colorBackground">#B2EBF2</color>
+    <color name="primary_light">#B2EBF2</color>
+    <color name="primary">#009688</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+
 </resources>
