--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -65,7 +65,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="2dp"
             android:gravity="center_vertical"
-            android:textColor="@color/primary"
+            android:textColor="@color/title"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Galaxy"
             android:textSize="17dp"
@@ -80,8 +80,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/sokoRating"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14dp"
-            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textColor="@color/money"
             android:singleLine="true"
                       />
 
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/sokoLocation"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="13dp"
+            android:textSize="15dp"
             android:textColor="@color/black"
             android:singleLine="true"
             />
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/sokoContact"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="13dp"
+            android:textSize="15dp"
             android:textColor="@color/black"
             android:singleLine="true"
             />
