--- a/app/src/main/res/layout/fragment_main_click.xml
+++ b/app/src/main/res/layout/fragment_main_click.xml
@@ -109,6 +109,7 @@ android:fitsSystemWindows="true">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17dp"
+                    android:text="Namba"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                 <View
