--- a/app/src/main/res/layout/fragment_soko_lookfeel.xml
+++ b/app/src/main/res/layout/fragment_soko_lookfeel.xml
@@ -13,7 +13,7 @@
     >
 
     <android.support.v7.widget.CardView
-        android:layout_width="160dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         card_view:contentPadding="7dp"
 
@@ -21,7 +21,7 @@
         card_view:cardCornerRadius="3dp"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="3dp"
         card_view:cardElevation="4dp"
         android:layout_marginBottom="1dp"
 
@@ -31,17 +31,23 @@
     android:layout_height="wrap_content"
 
     >
-
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/sokoThumbnail2"
+    android:orientation="vertical">
     <ImageView
         android:id="@+id/sokoThumbnail"
         android:layout_width="160dp"
-        android:layout_height="155dp"
+        android:layout_height="160dp"
         android:scaleType="fitXY"
         android:paddingBottom="5dp"
-                      />
-
+        android:background="@drawable/sokohuru"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center" />
+</LinearLayout>
     <LinearLayout
-        android:layout_below="@+id/sokoThumbnail"
+        android:layout_below="@+id/sokoThumbnail2"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
 
