The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/layout/activity_main_click.xml
+++ b/app/src/main/res/layout/activity_main_click.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:id="@+id/container2"
 
-    tools:context="sokohuru.muchbeer.king.sokohurutab.itemclick.MainActivityClick">
+    tools:context="king.muchbeer.sokohuru.itemclick.MainActivityClick">
 
 
 
