--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <sokohuru.muchbeer.king.sokohurutab.tab.SlidingTabLayout
+    <king.muchbeer.sokohuru.tab.SlidingTabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
