--- a/app/src/main/res/layout/include_main.xml
+++ b/app/src/main/res/layout/include_main.xml
@@ -28,7 +28,7 @@
         </android.support.v7.widget.Toolbar>
 
 
-        <sokohuru.muchbeer.king.sokohurutab.tab.SlidingTabLayout
+        <king.muchbeer.sokohuru.SlidingTabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,6 @@
             android:background="@color/primaryColor"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
-
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
