The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/drawable/custom_bg.xml
+++ b/app/src/main/res/drawable/custom_bg.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true">
 
         <shape>
-            <solid android:color="@color/cardLine"></solid>
+            <solid android:color="@color/background"></solid>
         </shape>
 
     </item>
