--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Jitoe"
-        android:enabled="true"
+        android:enabled="false"
         android:padding="4dp"
         android:layout_marginBottom="7dp"
         style="?android:attr/borderlessButtonStyle"
@@ -52,7 +52,7 @@
         android:text="Batilisha usajiri"
         style="?android:attr/borderlessButtonStyle"
         android:textColor="@color/colorSuccess"
-        android:enabled="true" />
+        android:enabled="false" />
 
     <TextView
         android:layout_width="wrap_content"
