--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,6 @@
     <item
         android:id="@+id/menu_search"
 
-        android:title="@string/menuSearch"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always"/>
+        android:title="Offline"
+        app:showAsAction="never"/>
 </menu>
